package com.github.marcellokim.issuetracker.domain;

// 확정
public enum Role {
    ADMIN,
    PL,
    DEV,
    TESTER
}
