@startuml domain-model-issue-tracking-system
!include ../_shared/its-uml-style.puml

left to right direction
hide stereotype
hide circle
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam nodesep 150
skinparam ranksep 115
skinparam linetype polyline
skinparam ArrowFontSize 15
skinparam ArrowThickness 1.25
skinparam PackageFontSize 16
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #37474F
  FontColor #263238
  FontSize 15
  AttributeFontSize 14
  BorderColor<<core>> #1565C0
  BorderColor<<record>> #2E7D32
  BorderColor<<value>> #6A1B9A
  BorderColor<<relation>> #8D6E63
}

title Issue Tracking System - Domain Model

package "사용자와 프로젝트" #EEF6FF {
  class User <<core>> {
    loginId
    name
    role: Role
    active
    createdDate
    updatedDate
  }

  class Project <<core>> {
    projectId
    name
    description
    createdDate
    updatedDate
  }

  class ProjectMember <<relation>> {
    joinedDate
  }
}

package "이슈 업무" #F1F8E9 {
  class Issue <<core>> {
    issueId
    title
    description
    reportedDate
    updatedDate
    priority: Priority
    status: IssueStatus
  }

  class Comment <<record>> {
    commentId
    content
    purpose: CommentPurpose
    createdDate
    updatedDate
  }

  class IssueHistory <<record>> {
    historyId
    action: ActionType
    previousValue
    newValue
    message
    changedDate
  }

  class IssueDependency <<relation>> {
    dependencyId
    discoveredDate
  }
}

package "분류 값" #F6F0FF {
  class "Role / Status / Priority" as ValueCatalog <<value>> {
    Role = ADMIN, PL, DEV, TESTER

    IssueStatus = NEW, ASSIGNED, FIXED, RESOLVED, 
                  CLOSED, REOPENED, DELETED
    
    Priority = BLOCKER, CRITICAL, MAJOR, MINOR, TRIVIAL
    
    CommentPurpose = GENERAL, STATUS_CHANGE
    
    ActionType = CREATED, STATUS_CHANGED, ASSIGNMENT_CHANGED, COMMENTED, 
                 TITLE_DESCRIPTION_UPDATED, PRIORITY_CHANGED, DEPENDENCY_CHANGED,
  }
}

User "1" -- "0..*" Project : manages\n(Admin)
User "1" -- "0..*" ProjectMember : joins as
Project "1" -- "0..*" ProjectMember : has\nmember
Project "1" -- "0..*" Issue : contains

User "0..*" -- "0..*" Issue : participates in issue\n(reporter, assignee, verifier,\nfixer, resolver)
User "1" -- "0..*" Comment : writes
User "1" -- "0..*" IssueHistory : changes

IssueDependency "0..*" -- "1" Issue : blocking\nissue
IssueDependency "0..*" -- "1" Issue : blocked\nissue
Issue "1" -- "0..*" Comment : has
Issue "1" -- "0..*" IssueHistory : records
Issue -[hidden]down- ValueCatalog

@enduml
